public/css/header.css
.superior3 {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: var(--cor-secundaria);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    list-style: none;
    padding: 20px;
    padding-left: 200px;
    padding-right: 200px;
    font-family: var(--font-paragrafo);
    text-decoration: none;
}

.inferior2 {
    position: fixed;
    top: 60px;
    width: 100%;
    background-color: #ffffff;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    list-style: none;
    padding: 20px;
    padding-left: 200px;
    padding-right: 100px;
    align-items: center;
    font-family: var(--font-paragrafo);
    font-style: none;
    text-decoration: none;
}

.inferior ul li a:hover {
    color: orange;

}

ul.inferior2 a {
    text-decoration: none;
}

.inferior2 ul {
    list-style: none;
    position: relative;
    padding-left: 310px;
}

.parteExterna ul {
    padding-left: 800px;
}

#Externa {
    padding-left: 450px;
}

.inferior ul ul {
    position: absolute;
    left: 0;
    right: 0;
    visibility: hidden;
    padding-top: 10px;

}

.inferior ul li:hover ul {
    visibility: visible;
    padding-top: 10px;
    transition: all 0.5s;
    width: 100%;
    background-color:aliceblue;
    columns: 3;
}


.inferior2 a {
    display: block;
    text-align: left;
}

.superior3 :last-child {
    text-decoration: none;
    color: var(--cor-texto-primaria);
}

.inferior2 .parteInterna a {
    padding: 5px;
    position: relative;
    margin: 0%;


}


.inferior2 .parteExterna a {
    padding: 5px;
    position: relative;

}


.ecommerce {
    font-style: var(--font-paragrafo);
}

.lupa {
    width: 30px;
    height: 30px;
}

.sacola {
    width: 20px;
    height: 20px;
}

.inferior2 .busca {
    border: none;
    flex-grow: 1;
    margin-right: 50px;
    border-bottom: 1px solid var(--cor-texto-primaria);
    outline: none;

}

.inferior2 li a {
    text-decoration: none;
    color: var(--cor-texto-primaria);
}

.inferior2 li {
    margin-right: 50px;
}

.inferior2 span {
    text-decoration-line: none;
    color: var(--cor-texto-primaria);
}

.painelusuario {
    width: 15%;
    padding-left: 50px;
}

label[for="bt_menu"] {
    padding: 5px;
    margin-top: 41px;
    background-color: var(--cor-secundaria);
    color: var(--cor-texto-primaria);
    font-family: var(--font-paragrafo);
    text-align: center;
    font-size: 30px;
    cursor: pointer;
    width: 50px;
    height: 50px;
}

#bt_menu {
    display: none;
}

label[for="bt_menu"] {
    display: none;
}

@media(max-width: 800px) {
    label[for="bt_menu"] {
        display: block;
    }

    #bt_menu:checked~.superior {
        margin-left: 0;
        top: 150px;
    }


    ul.inferior2 {
        position: static;
        max-height: 0;
        float: none;
    }
    ul.inferior2{
        margin-left: -100%;
    }

    ul.inferior2 span,
    ul.inferior2 .busca,
    ul.inferior .lupa,
    ul.inferior2 img,
    ul.inferior2 .sacola,
    ul.inferior2 .painelusuario,
    ul.inferior .sacola {
        visibility: hidden;
    }

    .superior ul li {
        position: static;
        overflow: hidden;
        max-height: 0;

    }

    .inferior ul:hover .parteInterna,
    .inferior ul:hover .parteExterna {
        height: auto;
        max-height: 200px;
    }

    ul.inferior2 a {
        text-decoration: none;
    }

    #bt_menu:checked ~ ul.inferior2{
        margin: left 0;
    }
}

